--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Maltika Profile</h1>
     <p>I study at KMUTNB.</p>
+    <footer>Contact : s6503051614046@email.kmutnb.ac.th</footer>
 </body>
 </html>
